NBNV-265 fixed incorrect month formatting in download metadata, added pink download caveat and stopped div collapse on first page load

--- a/portal/src/main/sass/gridmap.scss
+++ b/portal/src/main/sass/gridmap.scss
@@ -23,3 +23,7 @@
         width: 50%;
         float: left;
     }
+
+    .nbn-map-image-container-startup-height{
+        height: 700px;
+    }
